--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/project?server?Timezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=1234
 
+#update the schema with the given values.
+spring.jpa.hibernate.ddl-auto=update
+#To beautify or pretty print the SQL
+spring.jpa.properties.hibernate.format_sql=true
+#show sql
+spring.jpa.properties.hibernate.show-sql=true
