--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,11 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/project?server?Timezone=UTC&
 spring.datasource.username=root
 spring.datasource.password=1234
 
-#update the schema with the given values.
+#update the schema wiopenweathermapth the given values.
 spring.jpa.hibernate.ddl-auto=update
 #To beautify or pretty print the SQL
 spring.jpa.properties.hibernate.format_sql=true
 #show sql
 spring.jpa.properties.hibernate.show-sql=true
+
+openweathermap.key=95b0fe9c025352cd5a7017fe76b66873
