chore : logback 사용 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show-sql=true
 
 openweathermap.key=95b0fe9c025352cd5a7017fe76b66873
+
+logging.config=classpath:logback-spring.xml
