--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.show-sql=true
 openweathermap.key=95b0fe9c025352cd5a7017fe76b66873
 
 logging.config=classpath:logback-spring.xml
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
